applications/namespaces/default/whoami/whoami.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: whoami
    name: whoami
    namespace: default
spec:
    revisionHistoryLimit: 3
    replicas: 1
    selector:
        matchLabels:
            app: whoami
    template:
        metadata:
            labels:
                app: whoami
        spec:
            automountServiceAccountToken: true
            containers:
                - command:
                      - /whoami
                      - --port
                      - '8080'
                      - --verbose
                  image: traefik/whoami:v1.9.0@sha256:dbfd77023731193339012eab6ae35f474ea47d993a55a57eeeab94630733a9b0
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                      failureThreshold: 3
                      httpGet:
                          path: /health
                          port: http
                          scheme: HTTP
                      initialDelaySeconds: 15
                      periodSeconds: 10
                      successThreshold: 1
                      timeoutSeconds: 1
                  name: whoami
                  ports:
                      - containerPort: 8080
                        name: http
                        protocol: TCP
                  readinessProbe:
                      failureThreshold: 3
                      httpGet:
                          path: /health
                          port: http
                          scheme: HTTP
                      initialDelaySeconds: 15
                      periodSeconds: 10
                      successThreshold: 1
                      timeoutSeconds: 1
                  resources:
                      limits:
                          cpu: '4'
                          memory: 64Mi
                      requests:
                          cpu: 100m
                          memory: 64Mi
                  securityContext:
                      allowPrivilegeEscalation: false
                      privileged: false
                      readOnlyRootFilesystem: true
                      runAsGroup: 65532
                      runAsNonRoot: true
                      runAsUser: 65532
                      capabilities:
                        drop:
                          - "ALL"
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            enableServiceLinks: true
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            shareProcessNamespace: false
            terminationGracePeriodSeconds: 30
    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0
        type: RollingUpdate
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: whoami
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    labels:
        app: whoami
    name: whoami
    namespace: default
spec:
    egress: []
    podSelector:
        matchLabels:
            app: whoami
    policyTypes:
        - Egress
